# cli-tutorial

./: pyproject.toml
cli_tutorial/: cli.py
tests/: test_cli_tutorial.py
