[tool.poetry]
name = "cli-tutorial"
version = "0.1.0"
description = ""
authors = ["Simon Hawe <shawe@munichre.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
funcy = "^1.13"
black = "19.10b0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
